welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:12: error: 'while' expected but 'if' found.
  if(nbBiscuit <= 2)
  ^Poucet:13: error: '(' expected but ';' found.
  {
^Poucet:19: error: ';' expected but 'while' found.
  } while(!crossing)
    ^