welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbBiscuit = 0
while (!sortieTrouvee())
{
  do
  {
    avance()
    if (estSurBiscuit())
    {
      nbBiscuit = nbBiscuit +1
    }
  }
  if(nbBiscuit <= 2)
  {
    droite()
  }
  if (nbBiscuit >= 3)
  {
    gauche()
  } while(!crossing)
  nbBiscuit = 0
}
avance()